# birch

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  mise.dev.toml  mise.toml
.github/workflows/: ci.yml  release.yml
backlog/: index.md  log.md  workflow.md
backlog/archive/: 001-verify-name-availability.md  002-build-core-tree-view.md  003-add-git-status.md  004-add-live-updates.md  005-add-compact-folders.md  006-add-fuzzy-filename-search.md  007-add-picker-mode.md  008-add-state-persistence.md  009-add-control-socket.md  010-add-host-adapter-and-recipes.md  011-fix-quit-keys.md  014-refine-search-matching.md  019-split-chains-on-demand.md  020-drop-line-template.md  023-detach-open-cmd.md  024-adopt-cmux-dock-integration.md  038-add-ci-workflow.md  040-define-contribution-flow.md  041-restructure-tasks-bundle.md  042-set-up-homebrew-tap.md  043-automate-releases.md  050-unify-control-client.md
backlog/sprints/: sprint-001.md  sprint-004.md  sprint-013.md  sprint-014.md
backlog/tasks/: 028-add-copy-paths.md  029-add-file-operations.md  030-add-content-search.md  031-add-config-file.md  032-add-git-changes-source.md  033-add-project-view-source.md  034-add-open-with.md  035-verify-herdr-integration.md  038-add-ci-workflow.md  042-set-up-homebrew-tap.md  043-automate-releases.md  044-document-installation.md  045-add-repo-demo.md  046-add-cargo-metadata.md  047-decide-crates-io-publish.md  048-add-changelog.md  049-dedup-and-route-docs.md  050-unify-control-client.md  051-install-adapters-on-path.md
contrib/: birch-cmux  birch-herdr  birch-tmux
crates/birch/: Cargo.toml
crates/birch-core/: Cargo.toml
crates/birch-core/src/: files_source.rs  git.rs  lib.rs  open_cmd.rs  persist.rs  protocol.rs  search.rs  settings.rs  source.rs  tree.rs  watcher.rs
crates/birch-ctl/: Cargo.toml
crates/birch-ctl/src/: main.rs
crates/birch-tui/: Cargo.toml
crates/birch-tui/src/: flat_view.rs  icons.rs  input.rs  lib.rs  render.rs
crates/birch/src/: app.rs  ctl.rs  ctl_client.rs  main.rs  term.rs
docs/: design.md  index.md  integrations.md  log.md
docs/adr/: 0001-mvp-scope.md  0002-keep-the-name-birch.md  0003-view-model-lives-in-birch-tui.md  0004-sources-run-on-threads.md  0005-git-status-via-git-cli.md  0006-snapshot-deltas-stateless-sources.md  0007-compaction-peek-loading.md  0008-q-types-into-search.md  0009-search-index-and-engine.md  0010-socket-addressing-and-lifecycle.md  0011-ndjson-protocol.md  (+10 more)
tasks/: 025-add-visual-styles.md  027-add-picker-filter.md  029-add-file-operations.md  030-add-content-search.md  031-add-config-file.md  032-add-git-changes-source.md  033-add-project-view-source.md  034-add-open-with.md  036-add-license-file.md  037-remove-scratch-fixtures.md  041-restructure-tasks-bundle.md  042-set-up-homebrew-tap.md  044-document-installation.md  047-decide-crates-io-publish.md  048-add-changelog.md  add-cargo-metadata.md  add-ci-workflow.md  add-compact-folders.md  add-config-file.md  add-content-search.md  add-control-socket.md  add-file-operations.md  add-fuzzy-filename-search.md  add-git-changes-source.md  add-git-status.md  add-host-adapter-and-recipes.md  add-license-file.md  add-live-updates.md  add-multiple-roots.md  add-open-with.md  add-picker-filter.md  add-picker-mode.md  add-project-view-source.md  add-state-persistence.md  adopt-cmux-dock-integration.md  automate-releases.md  build-core-tree-view.md  cli-truthfulness.md  click-selects-first.md  decide-crates-io-publish.md  (+29 more)
(+27 files in other folders)
