[workspace]
resolver = "3"
members = [
    "crates/birch-core",
    "crates/birch-tui",
    "crates/birch",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/slukyano/birch"
homepage = "https://github.com/slukyano/birch"
keywords = ["tui", "terminal", "file-manager", "tree", "ratatui"]
categories = ["command-line-utilities"]

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
shell-words = "1.1"
ignore = "0.4"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
unicode-segmentation = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
