[package]
name = "birch-tui"
description = "Render layer: compaction, badges, widget, mouse, context menu, inline edit."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
birch-core = { path = "../birch-core" }
ratatui.workspace = true
crossterm.workspace = true
